--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Welcome to Owen Pauptit's Github
-description: Content coming soon!
+description: A portfolio of all my significant programming projects
