--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to Owen Pauptit's Github
-description: A portfolio of all my significant programming projects
+title: Owen Pauptit
+description: A GitHub portfolio of all my significant programming projects
